replaced border with outline on profile_img, resolved issue of image rendering 6px too small width and height.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,7 +136,7 @@ body {
 .profile__img {
 	width: 6.4rem;
 	height: 6.4rem;
-	border: 3px solid var(--clr-white);
+	outline: 3px solid var(--clr-white);
 	border-radius: 50%;
 	margin: 3.5rem 2rem 3.4rem 3.2rem;
 	filter: drop-shadow(0rem 0.4rem 0.4rem hsla(0, 0%, 0%, 0.25));
